внести правки в разметку и в скрипт

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </div>
                 <p class="profile__subtitle">Исследователь океана</p>
             </article>
-            <img class="profile__add-button" src="./images/vector/profile__add-button.svg">
+            <button class="profile__add-button"><img src="./images/vector/plus.svg" alt=""></button>
         </section>
         <section class="elements">
             <div class="card">
