Исправить ошибки валидатора

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 <body class="page">
     <section class="overlay">
         <article class="menu">
-            <img src="./images/vector/Close Icon.svg" alt="крестик" class="close-icon">
+            <img src="./images/vector/Close_Icon.svg" alt="крестик" class="close-icon">
             <h2 class="menu__title">Редактировать профиль</h2>
             <div class="menu__options">
                 <input type="text" placeholder="Жак-Ив Кусто" class="menu__name">
                 <input type="text" placeholder="Исследователь океана" class="menu__subtitle">
                 <button class="menu__button">
-                    <p>Сохранить</p>
+                    Сохранить
                 </button>
             </div>
         </article>
@@ -32,7 +32,8 @@
             <article class="profile-info">
                 <div class="profile-heading">
                     <h1 class="profile__name">Жак-Ив Кусто</h1>
-                    <img class="profile__edit-button" src="./images/vector/profile__Edit-Button.svg">
+                    <img class="profile__edit-button" src="./images/vector/profile__Edit-Button.svg"
+                        alt="Кнопка добавления">
                 </div>
                 <p class="profile__subtitle">Исследователь океана</p>
             </article>
