Исправить меню и добавить анимацию кнопкам

--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
             <div class="menu__options">
                 <input type="text" placeholder="Жак-Ив Кусто" class="menu__name">
                 <input type="text" placeholder="Исследователь океана" class="menu__subtitle">
-                <button class="menu__button">
-                    Сохранить
-                </button>
+
             </div>
+            <button class="menu__button">
+                Сохранить
+            </button>
         </article>
     </section>
     <wrapper class="wrapper">
@@ -37,49 +38,50 @@
                 </div>
                 <p class="profile__subtitle">Исследователь океана</p>
             </article>
-            <button class="profile__add-button"><img src="./images/vector/plus.svg" alt=""></button>
+            <button class="profile__add-button"><img src="./images/vector/plus.svg" alt="Плюс"></button>
         </section>
         <section class="elements">
             <div class="card">
                 <img src="./images/jpg/kirill-pershin-1088404-unsplash.jpg" alt="Карачевск" class="card_image">
                 <div class="card__bottom">
                     <h2 class="card__title">Карачевск</h2>
-                    <img src="./images/vector/card__like.svg" alt="" class="card__button-like">
+                    <img src="./images/vector/card__like.svg" alt="Лайк" class="card__button-like ">
+
                 </div>
             </div>
             <div class="card">
-                <img src="./images/jpg/elbrus.jpg" alt="" class="card_image">
+                <img src="./images/jpg/elbrus.jpg" alt="Эльбрус" class="card_image">
                 <article class="card__bottom">
                     <h2 class="card__title">Гора Эльбрус</h2>
-                    <img src="./images/vector/card__like.svg" alt="Эльбрус" class="card__button-like">
+                    <img src="./images/vector/card__like.svg" alt="Лайк" class="card__button-like">
                 </article>
             </div>
             <div class="card">
-                <img src="./images/jpg/dombai.jpg" alt="" class="card_image">
+                <img src="./images/jpg/dombai.jpg" alt="Домбай" class="card_image">
                 <article class="card__bottom">
                     <h2 class="card__title">Домбай</h2>
-                    <img src="./images/vector/card__like.svg" alt="Домбай" class="card__button-like">
+                    <img src="./images/vector/card__like.svg" alt="Лайк" class="card__button-like">
                 </article>
             </div>
             <div class="card">
-                <img src="./images/jpg/elbrus.jpg" alt="" class="card_image">
+                <img src="./images/jpg/elbrus.jpg" alt="Эльбрус" class="card_image">
                 <article class="card__bottom">
                     <h2 class="card__title">Гора Эльбрус</h2>
-                    <img src="./images/vector/card__like.svg" alt="" class="card__button-like">
+                    <img src="./images/vector/card__like.svg" alt="Лайк" class="card__button-like">
                 </article>
             </div>
             <div class="card">
-                <img src="./images/jpg/dombai.jpg" alt="" class="card_image">
+                <img src="./images/jpg/dombai.jpg" alt="Домбай" class="card_image">
                 <article class="card__bottom">
                     <h2 class="card__title">Домбай</h2>
-                    <img src="./images/vector/card__like.svg" alt="" class="card__button-like">
+                    <img src="./images/vector/card__like.svg" alt="Лайк" class="card__button-like">
                 </article>
             </div>
             <div class="card">
-                <img src="./images/jpg/kirill-pershin-1088404-unsplash.jpg" alt="" class="card_image">
+                <img src="./images/jpg/kirill-pershin-1088404-unsplash.jpg" alt="Карачаево-Черкессия" class="card_image">
                 <article class="card__bottom">
                     <h2 class="card__title">Карачаево-Черкессия</h2>
-                    <img src="./images/vector/card__like.svg" alt="" class="card__button-like">
+                    <img src="./images/vector/card__like.svg" alt="Лайк" class="card__button-like">
                 </article>
             </div>
         </section>
