Исправлены ошибки валидатора

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </button>
         </article>
     </section>
-    <wrapper class="wrapper">
+    <div class="wrapper">
         <header class="header">
             <img class="header__logo" src="./images/vector/header__logo.svg" alt="Лого">
         </header>
@@ -88,7 +88,7 @@
         <footer class="footer">
             <h2 class="footer__copyright">© 2020 Mesto Russia</h2>
         </footer>
-    </wrapper>
+    </div>
     <script src="./script.js"></script>
 </body>
 
