Исправить ошибки валидатора

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </section>
         <section class="elements">
             <div class="card">
-                <img src="./images/jpg/kirill-pershin-1088404-unsplash.jpg" alt="Карачевск" class="card_image">
+                <img src="./images/jpg/kirill-pershin-1088404-unsplash.jpg" alt="Карачевск" class="card__image">
                 <div class="card__bottom">
                     <h2 class="card__title">Карачевск</h2>
                     <img src="./images/vector/card__like.svg" alt="Лайк" class="card__button-like ">
@@ -50,35 +50,35 @@
                 </div>
             </div>
             <div class="card">
-                <img src="./images/jpg/elbrus.jpg" alt="Эльбрус" class="card_image">
+                <img src="./images/jpg/elbrus.jpg" alt="Эльбрус" class="card__image">
                 <article class="card__bottom">
                     <h2 class="card__title">Гора Эльбрус</h2>
                     <img src="./images/vector/card__like.svg" alt="Лайк" class="card__button-like">
                 </article>
             </div>
             <div class="card">
-                <img src="./images/jpg/dombai.jpg" alt="Домбай" class="card_image">
+                <img src="./images/jpg/dombai.jpg" alt="Домбай" class="card__image">
                 <article class="card__bottom">
                     <h2 class="card__title">Домбай</h2>
                     <img src="./images/vector/card__like.svg" alt="Лайк" class="card__button-like">
                 </article>
             </div>
             <div class="card">
-                <img src="./images/jpg/elbrus.jpg" alt="Эльбрус" class="card_image">
+                <img src="./images/jpg/elbrus.jpg" alt="Эльбрус" class="card__image">
                 <article class="card__bottom">
                     <h2 class="card__title">Гора Эльбрус</h2>
                     <img src="./images/vector/card__like.svg" alt="Лайк" class="card__button-like">
                 </article>
             </div>
             <div class="card">
-                <img src="./images/jpg/dombai.jpg" alt="Домбай" class="card_image">
+                <img src="./images/jpg/dombai.jpg" alt="Домбай" class="card__image">
                 <article class="card__bottom">
                     <h2 class="card__title">Домбай</h2>
                     <img src="./images/vector/card__like.svg" alt="Лайк" class="card__button-like">
                 </article>
             </div>
             <div class="card">
-                <img src="./images/jpg/kirill-pershin-1088404-unsplash.jpg" alt="Карачаево-Черкессия" class="card_image">
+                <img src="./images/jpg/kirill-pershin-1088404-unsplash.jpg" alt="Карачаево-Черкессия" class="card__image">
                 <article class="card__bottom">
                     <h2 class="card__title">Карачаево-Черкессия</h2>
                     <img src="./images/vector/card__like.svg" alt="Лайк" class="card__button-like">
