--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <input type="text" name="menu__name" placeholder="Жак-Ив Кусто" class="menu__name">
                 <input type="text" name="menu__subtitle" placeholder="Исследователь океана" class="menu__subtitle">
             </div>
-            <button class="menu__button">
+            <button type="submit" class="menu__button">
                 Сохранить
             </button>
         </article>
@@ -29,15 +29,15 @@
         </header>
         <section class="profile">
             <img class="profile__avatar" src="./images/jpg/kysto.jpg" alt="Кусто">
-            <article class="profile-info">
-                <div class="profile-heading">
+            <article class="profile__info">
+                <div class="profile__heading">
                     <h1 class="profile__name">Жак-Ив Кусто</h1>
                     <img class="profile__edit-button" src="./images/vector/profile__Edit-Button.svg"
                         alt="Кнопка добавления">
                 </div>
                 <p class="profile__subtitle">Исследователь океана</p>
             </article>
-            <button class="profile__add-button"><img src="./images/vector/plus.svg" alt="Плюс"></button>
+            <button type="submit" class="profile__add-button"><img src="./images/vector/plus.svg" alt="Плюс"></button>
         </section>
         <section class="elements">
             <div class="card">
