Исправить ошибки в блоках

--- a/index.html
+++ b/index.html
@@ -37,59 +37,58 @@
                 </div>
                 <p class="profile__subtitle">Исследователь океана</p>
             </article>
-            <button type="submit" class="profile__add-button"><img src="./images/vector/plus.svg" alt="Плюс"></button>
+            <button type="" class="profile__add-button"><img src="./images/vector/plus.svg" alt="Плюс"></button>
         </section>
         <section class="elements">
             <div class="card">
                 <img src="./images/jpg/kirill-pershin-1088404-unsplash.jpg" alt="Карачевск" class="card__image">
-                <div class="card__bottom">
+                <div class="card__description">
                     <h2 class="card__title">Карачевск</h2>
-                    <img src="./images/vector/card__like.svg" alt="Лайк" class="card__button-like ">
-
+                    <button class="card__button-like" type="submit"></button>
                 </div>
             </div>
             <div class="card">
                 <img src="./images/jpg/elbrus.jpg" alt="Эльбрус" class="card__image">
-                <article class="card__bottom">
+                <div class="card__description">
                     <h2 class="card__title">Гора Эльбрус</h2>
-                    <img src="./images/vector/card__like.svg" alt="Лайк" class="card__button-like">
-                </article>
+                    <button class="card__button-like" type="submit"></button>
+                </div>
             </div>
             <div class="card">
                 <img src="./images/jpg/dombai.jpg" alt="Домбай" class="card__image">
-                <article class="card__bottom">
+                <div class="card__description">
                     <h2 class="card__title">Домбай</h2>
-                    <img src="./images/vector/card__like.svg" alt="Лайк" class="card__button-like">
-                </article>
+                    <button class="card__button-like" type="submit"></button>
+                </div>
             </div>
             <div class="card">
                 <img src="./images/jpg/elbrus.jpg" alt="Эльбрус" class="card__image">
-                <article class="card__bottom">
+                <div class="card__description">
                     <h2 class="card__title">Гора Эльбрус</h2>
-                    <img src="./images/vector/card__like.svg" alt="Лайк" class="card__button-like">
-                </article>
+                    <button class="card__button-like" type="submit"></button>
+                </div>
             </div>
             <div class="card">
                 <img src="./images/jpg/dombai.jpg" alt="Домбай" class="card__image">
-                <article class="card__bottom">
+                <div class="card__description">
                     <h2 class="card__title">Домбай</h2>
-                    <img src="./images/vector/card__like.svg" alt="Лайк" class="card__button-like">
-                </article>
+                    <button class="card__button-like" type="submit"></button>
+                </div>
             </div>
             <div class="card">
                 <img src="./images/jpg/kirill-pershin-1088404-unsplash.jpg" alt="Карачаево-Черкессия"
                     class="card__image">
-                <article class="card__bottom">
+                <div class="card__description">
                     <h2 class="card__title">Карачаево-Черкессия</h2>
-                    <img src="./images/vector/card__like.svg" alt="Лайк" class="card__button-like">
-                </article>
+                    <button class="card__button-like" type="submit"></button>
+                </div>
             </div>
         </section>
         <footer class="footer">
             <h2 class="footer__copyright">© 2020 Mesto Russia</h2>
         </footer>
     </div>
-    <script src="./script.js"></script>
+    <script src="./scripts/script.js"></script>
 </body>
 
 </html>
