Исправить ошибки валидатора

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </div>
                 <p class="profile__subtitle">Исследователь океана</p>
             </article>
-            <button type="" class="profile__add-button"><img src="./images/vector/plus.svg" alt="Плюс"></button>
+            <button type="submit" class="profile__add-button"><img src="./images/vector/plus.svg" alt="Плюс"></button>
         </section>
         <section class="elements">
             <div class="card">
