Исправить ошибки в разметке и в скрипте

--- a/index.html
+++ b/index.html
@@ -10,19 +10,6 @@
 </head>
 
 <body class="page">
-    <div class="popup">
-        <article class="menu">
-            <img src="./images/vector/Close_Icon.svg" alt="крестик" class="menu__close-icon">
-            <h2 class="menu__title">Редактировать профиль</h2>
-            <div class="menu__options">
-                <input type="text" name="menu__name" placeholder="Жак-Ив Кусто" class="menu__name">
-                <input type="text" name="menu__subtitle" placeholder="Исследователь океана" class="menu__subtitle">
-            </div>
-            <button type="submit" class="menu__button">
-                Сохранить
-            </button>
-        </article>
-    </div>
     <div class="wrapper">
         <header class="header">
             <img class="header__logo" src="./images/vector/header__logo.svg" alt="Лого">
@@ -32,47 +19,46 @@
             <article class="profile__info">
                 <div class="profile__heading">
                     <h1 class="profile__name">Жак-Ив Кусто</h1>
-                    <img class="profile__edit-button" src="./images/vector/profile__Edit-Button.svg"
-                        alt="Кнопка добавления">
+                    <button class="profile__edit-button"></button>
                 </div>
                 <p class="profile__subtitle">Исследователь океана</p>
             </article>
-            <button type="submit" class="profile__add-button"><img src="./images/vector/plus.svg" alt="Плюс"></button>
+            <button type="button" class="profile__add-button"><img src="./images/vector/plus.svg" alt="Плюс"></button>
         </section>
         <section class="elements">
             <div class="card">
                 <img src="./images/jpg/kirill-pershin-1088404-unsplash.jpg" alt="Карачевск" class="card__image">
                 <div class="card__description">
                     <h2 class="card__title">Карачевск</h2>
-                    <button class="card__button-like" type="submit"></button>
+                    <button class="card__button-like" type="button"></button>
                 </div>
             </div>
             <div class="card">
                 <img src="./images/jpg/elbrus.jpg" alt="Эльбрус" class="card__image">
                 <div class="card__description">
                     <h2 class="card__title">Гора Эльбрус</h2>
-                    <button class="card__button-like" type="submit"></button>
+                    <button class="card__button-like" type="button"></button>
                 </div>
             </div>
             <div class="card">
                 <img src="./images/jpg/dombai.jpg" alt="Домбай" class="card__image">
                 <div class="card__description">
                     <h2 class="card__title">Домбай</h2>
-                    <button class="card__button-like" type="submit"></button>
+                    <button class="card__button-like" type="button"></button>
                 </div>
             </div>
             <div class="card">
                 <img src="./images/jpg/elbrus.jpg" alt="Эльбрус" class="card__image">
                 <div class="card__description">
                     <h2 class="card__title">Гора Эльбрус</h2>
-                    <button class="card__button-like" type="submit"></button>
+                    <button class="card__button-like" type="button"></button>
                 </div>
             </div>
             <div class="card">
                 <img src="./images/jpg/dombai.jpg" alt="Домбай" class="card__image">
                 <div class="card__description">
                     <h2 class="card__title">Домбай</h2>
-                    <button class="card__button-like" type="submit"></button>
+                    <button class="card__button-like" type="button"></button>
                 </div>
             </div>
             <div class="card">
@@ -80,13 +66,26 @@
                     class="card__image">
                 <div class="card__description">
                     <h2 class="card__title">Карачаево-Черкессия</h2>
-                    <button class="card__button-like" type="submit"></button>
+                    <button class="card__button-like" type="button"></button>
                 </div>
             </div>
         </section>
         <footer class="footer">
             <h2 class="footer__copyright">© 2020 Mesto Russia</h2>
         </footer>
+    </div>
+    <div class="popup">
+        <div class="menu">
+            <img src="./images/vector/Close_Icon.svg" alt="крестик" class="menu__close-icon">
+            <h2 class="menu__title">Редактировать профиль</h2>
+            <form class="menu__options">
+                <input type="text" name="menu__name" value="Жак-Ив Кусто" class="form__input form__input_type_name">
+                <input type="text" name="menu__subtitle" value="Исследователь океана" class="form__input form__input_type_job">
+            </form>
+            <button type="submit" class="menu__button">
+                Сохранить
+            </button>
+        </div>
     </div>
     <script src="./scripts/script.js"></script>
 </body>
