Исправить валидацию БЭМ

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="menu">
             <img src="./images/vector/Close_Icon.svg" alt="крестик" class="menu__close-icon">
             <h2 class="menu__title">Редактировать профиль</h2>
-            <form class="menu__options">
+            <form class="form">
                 <input type="text" name="menu__name" value="Жак-Ив Кусто" class="form__input form__input_type_name">
                 <input type="text" name="menu__subtitle" value="Исследователь океана" class="form__input form__input_type_job">
             </form>
