Исправить ошибки ревью

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <article class="profile__info">
                 <div class="profile__heading">
                     <h1 class="profile__name">Жак-Ив Кусто</h1>
-                    <button class="profile__edit-button"></button>
+                    <button type="button" class="profile__edit-button "></button>
                 </div>
                 <p class="profile__subtitle">Исследователь океана</p>
             </article>
