Исправить последние замечания

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
             <article class="profile__info">
                 <div class="profile__heading">
                     <h1 class="profile__name">Жак-Ив Кусто</h1>
-                    <button type="button" class="profile__edit-button "></button>
+                    <button type="button" class="profile__edit-button"></button>
                 </div>
                 <p class="profile__subtitle">Исследователь океана</p>
             </article>
-            <button type="button" class="profile__add-button"><img src="./images/vector/plus.svg" alt="Плюс"></button>
+            <button type="button" class="profile__add-button"></button>
         </section>
         <section class="elements">
             <div class="card">
@@ -76,7 +76,7 @@
     </div>
     <div class="popup">
         <div class="menu">
-            <button class="menu__close-icon" type="button"><img src="./images/vector/Close_Icon.svg" alt="крестик" class="menu__close-icon"> </button>
+            <button class="menu__close-icon" type="button"></button>
             <h2 class="menu__title">Редактировать профиль</h2>
             <form class="form" name="formMenu">
                 <input type="text" name="menuName" value="Жак-Ив Кусто" class="form__input form__input_type_name">
