--- a/index.html
+++ b/index.html
@@ -26,14 +26,18 @@
             <button type="button" class="profile__add-button"></button>
         </section>
         <section class="elements">
+            <template id = "card-template">
             <div class="card">
+                <button class="card__button-delete" type="button"></button>
                 <img src="./images/jpg/kirill-pershin-1088404-unsplash.jpg" alt="Карачевск" class="card__image">
                 <div class="card__description">
                     <h2 class="card__title">Карачевск</h2>
                     <button class="card__button-like" type="button"></button>
                 </div>
             </div>
+
             <div class="card">
+                <button class="card__button-delete" type="button"></button>
                 <img src="./images/jpg/elbrus.jpg" alt="Эльбрус" class="card__image">
                 <div class="card__description">
                     <h2 class="card__title">Гора Эльбрус</h2>
@@ -41,6 +45,7 @@
                 </div>
             </div>
             <div class="card">
+                <button class="card__button-delete" type="button"></button>
                 <img src="./images/jpg/dombai.jpg" alt="Домбай" class="card__image">
                 <div class="card__description">
                     <h2 class="card__title">Домбай</h2>
@@ -48,6 +53,7 @@
                 </div>
             </div>
             <div class="card">
+                <button class="card__button-delete" type="button"></button>
                 <img src="./images/jpg/elbrus.jpg" alt="Эльбрус" class="card__image">
                 <div class="card__description">
                     <h2 class="card__title">Гора Эльбрус</h2>
@@ -55,6 +61,7 @@
                 </div>
             </div>
             <div class="card">
+                <button class="card__button-delete" type="button"></button>
                 <img src="./images/jpg/dombai.jpg" alt="Домбай" class="card__image">
                 <div class="card__description">
                     <h2 class="card__title">Домбай</h2>
@@ -62,6 +69,7 @@
                 </div>
             </div>
             <div class="card">
+                <button class="card__button-delete" type="button"></button>
                 <img src="./images/jpg/kirill-pershin-1088404-unsplash.jpg" alt="Карачаево-Черкессия"
                     class="card__image">
                 <div class="card__description">
@@ -69,6 +77,7 @@
                     <button class="card__button-like" type="button"></button>
                 </div>
             </div>
+        </template>
         </section>
         <footer class="footer">
             <h2 class="footer__copyright">© 2020 Mesto Russia</h2>
@@ -86,7 +95,20 @@
                     Сохранить
                 </button>
             </form>
-
+        </div>
+    </div>
+    <div class="popup-cards ">
+        <div class="menu-cards menu">
+            <button class="menu__close-icon menu__card-close" type="button"></button>
+            <h2 class="menu__title menu__title-cards">Новое место</h2>
+            <form class="form" name="formMenu">
+                <input type="text" name="cardName" placeholder="Название" class="form__input form__input_type_name">
+                <input type="link" name="link" placeholder="Ссылка на картинку"
+                    class="form__input form__input_type_job">
+                <button type="submit" class="menu__button card_create">
+                    Создать
+                </button>
+            </form>
         </div>
     </div>
     <script src="./scripts/script.js"></script>
