Создать node элементы

--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
             <button class="menu__close-icon menu__card-close" type="button"></button>
             <h2 class="menu__title menu__title-cards">Новое место</h2>
             <form class="form" name="formMenu">
-                <input type="text" name="cardName" placeholder="Название" class="form__input form__input_type_name">
+                <input type="text" name="cardName" placeholder="Название" class="form__input form__input_type_text">
                 <input type="link" name="link" placeholder="Ссылка на картинку"
-                    class="form__input form__input_type_job">
+                    class="form__input form__input_type_link">
                 <button type="submit" class="menu__button card_create">
                     Создать
                 </button>
