--- a/index.html
+++ b/index.html
@@ -51,12 +51,11 @@
         <div class="menu-cards menu">
             <button class="menu__close-icon menu__card-close" type="button"></button>
             <h2 class="menu__title menu__title-cards">Новое место</h2>
-            <form class="form" name="formMenu">
-                <input type="text" name="cardName" placeholder="Название" class="form__input form__input_type_text">
+            <form class="form-cards" name="formCards">
+                <input type="text" name="cardName" placeholder="Название" class="form-cards__input form-cards__input_type_text">
                 <input type="link" name="link" placeholder="Ссылка на картинку"
-                    class="form__input form__input_type_link">
-                <input type="button" class="menu__button card_create" value="Создать">
-                    
+                    class="form-cards__input form__input_type_link">
+                <input type="button" class="menu__button menu-cards__buttonCreate" value="Создать">
                 </input>
             </form>
         </div>
@@ -71,6 +70,9 @@
             </div>
         </div>
         </template>
+        <div class="popup-image">
+
+        </div>
     <script src="./scripts/script.js"></script>
 </body>
 
