--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <h2 class="footer__copyright">© 2020 Mesto Russia</h2>
         </footer>
     </div>
-    <div class="popup">
+    <div class="popup animation-open">
         <div class="menu">
             <button class="menu__close-icon" type="button"></button>
             <h2 class="menu__title">Редактировать профиль</h2>
@@ -47,13 +47,13 @@
             </form>
         </div>
     </div>
-    <div class="popup-cards ">
+    <div class="popup-cards animation-open">
         <div class="menu-cards menu">
             <button class="menu__close-icon menu__card-close" type="button"></button>
             <h2 class="menu__title menu__title-cards">Новое место</h2>
             <form class="form-cards" name="formCards">
-                <input type="text" name="cardName" placeholder="Название" class="form-cards__input form-cards__input_type_text">
-                <input type="link" name="link" placeholder="Ссылка на картинку"
+                <input type="text" name="" placeholder="Название" class="form-cards__input form-cards__input_type_text">
+                <input type="link" name="" placeholder="Ссылка на картинку"
                     class="form-cards__input form__input_type_link">
                 <input type="button" class="menu__button menu-cards__buttonCreate" value="Создать">
                 </input>
@@ -70,9 +70,11 @@
             </div>
         </div>
         </template>
-        <div class="popup-image">
+        <template class="popup-image-template">
+        <div class="popup-image animation-open">
 
         </div>
+    </template>
     <script src="./scripts/script.js"></script>
 </body>
 
